--- a/view/css/style.css
+++ b/view/css/style.css
@@ -5,12 +5,12 @@
 }
 
 
-body > div.container > div > button.slick-prev.slick-arrow
+body > div.container > div > div.container > div > button.slick-prev.slick-arrow
 {
     background-color: red;
 }
 
-body > div.container > div > button.slick-next.slick-arrow
+body > div.container > div > div.container > div > button.slick-next.slick-arrow
 {
     background-color: red;
 }
