Design, organisation 5 last avatar

--- a/view/css/style.css
+++ b/view/css/style.css
@@ -7,7 +7,7 @@
 
 body > div.container > div > div.container > div > button.slick-prev.slick-arrow
 {
-    background-color: red;
+    background-color: #F44336;
 }
 
 body > div.container > div > div.container > div > button.slick-next.slick-arrow
