--- a/view/css/style.css
+++ b/view/css/style.css
@@ -19,19 +19,25 @@ body
     margin-top: 2.5em;
 }
 
-#zombieModeDiv
+.zombieModeDiv
 {
     z-index: 2 !important;
     background-color: transparent; 
 }
 
-#zombieModeDiv > div > div
+.zombieModeDivTG
+{
+    background-color: rgba(0, 0, 255, 1);
+    z-index: 2 !important;
+}
+
+.zombieModeDiv > div > div
 {
     z-index:-1;
 }
 
 
-#zombieModeDiv > div > button.slick-prev.slick-arrow
+.zombieModeDiv > div > button.slick-prev.slick-arrow
 {
     z-index: 5;
     background-color: #F44336;
@@ -40,7 +46,7 @@ body
     border-radius: 0px 10px 0px 10px;
 }
 
-#zombieModeDiv > div > button.slick-prev.slick-arrow:before
+.zombieModeDiv > div > button.slick-prev.slick-arrow:before
 {
     position: relative;
     bottom: 22px;
@@ -48,7 +54,7 @@ body
     font-size: 40px;
 }
 
-#zombieModeDiv > div > button.slick-next.slick-arrow
+.zombieModeDiv > div > button.slick-next.slick-arrow
 {
     z-index: 5;
     background-color: #2196F3;
@@ -57,7 +63,7 @@ body
     border-radius: 0px 10px 0px 10px;
 }
 
-#zombieModeDiv > div > button.slick-next.slick-arrow:before
+.zombieModeDiv > div > button.slick-next.slick-arrow:before
 {
     position: relative;
     bottom: 22px;
@@ -91,3 +97,7 @@ body
   transform: translateY(4px);
 }
 
+textarea
+{    
+    width: 160px;    height: 60px;    background-color: white;    resize: none;
+}
